create .py's and save model

--- a/src/model/Diabetes/diabetes prediction.ipynb
+++ b/src/model/Diabetes/diabetes prediction.ipynb
@@ -28,7 +28,8 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn import metrics\n",
-    "from sklearn.metrics import plot_confusion_matrix, accuracy_score, classification_report"
+    "from sklearn.metrics import plot_confusion_matrix, accuracy_score, classification_report\n",
+    "import joblib"
    ]
   },
   {
